--- a/Codes/chasses_au_tresor/styles/jeu.css
+++ b/Codes/chasses_au_tresor/styles/jeu.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #main {
@@ -18,6 +19,7 @@ body {
     margin: 2px;
     border: 1px solid rgb(140, 148, 140);
     border-radius: 5px;
+    opacity: 0.5;
 }
 
 #clicked {
@@ -27,6 +29,8 @@ body {
 #message {
     border: 1px solid rgb(150, 141, 141);
     width: 45%;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 #info {
@@ -34,5 +38,4 @@ body {
     width: 20%;
     padding: 0;
     margin: 0;
- 
 }
