--- a/Codes/chasses_au_tresor/styles/jeu.css
+++ b/Codes/chasses_au_tresor/styles/jeu.css
@@ -9,9 +9,11 @@ body {
 
 #carte {
     border: 1px solid rgb(150, 141, 141);
-    width: 35%;
+    /* width: 35%; */
     padding: 0;
     margin: 0;
+    width: auto;
+
 }
 
 .cases {
@@ -34,7 +36,7 @@ body {
 }
 
 #info {
-    border: 1px solid rgb(150, 141, 141);
+    /* border: 1px solid rgb(150, 141, 141); */
     width: 20%;
     padding: 0;
     margin: 0;
