--- a/Codes/chasses_au_tresor/styles/jeu.css
+++ b/Codes/chasses_au_tresor/styles/jeu.css
@@ -31,7 +31,8 @@ body {
     border: 1px solid rgb(150, 141, 141);
     width: 45%;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
+    position: relative;
 }
 
 #info {
