--- a/Codes/chasses_au_tresor/styles/jeu.css
+++ b/Codes/chasses_au_tresor/styles/jeu.css
@@ -8,27 +8,26 @@ body {
 }
 
 #carte {
+    flex-direction: row;
     border: 1px solid rgb(150, 141, 141);
-    /* width: 35%; */
     padding: 0;
-    margin: 0;
-    width: 60%;
+    margin: 10px;
+    width: auto 100%;
+}
+
+.row {
+    width: auto;
+    display: flex;
+    flex-direction: row;
 }
 
 .cases {
-    width: 10vh;
-    height: 10vh;
-    max-height: 10vw;
-    max-width: 10vw;
+    width: 20px;
+    height: 20px;
     margin: 2px;
     border: 1px solid rgb(140, 148, 140);
     border-radius: 5%;
     opacity: 0.5;
-}
-
-.cases::after {
-    display: block;
-    padding-bottom: 100%;
 }
 
 #clicked {
@@ -36,11 +35,12 @@ body {
 }
 
 #message {
-    border: 1px solid rgb(150, 141, 141);
-    width: 45%;
+    /* border: 1px solid rgb(150, 141, 141); */
+    margin: 10px;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    position: relative;
 }
 
 #info {
