--- a/Codes/chasses_au_tresor/V0/styles/jeu.css
+++ b/Codes/chasses_au_tresor/V0/styles/jeu.css
@@ -8,15 +8,14 @@ body {
 }
 
 #carte {
-    flex-direction: row;
+    display: block;
     border: 1px solid rgb(150, 141, 141);
     padding: 0;
     margin: 10px;
-    width: auto 100%;
+    height: 260px;
 }
 
 .row {
-    width: auto;
     display: flex;
     flex-direction: row;
 }
@@ -44,12 +43,8 @@ body {
 } */
 
 #message {
-    /* border: 1px solid rgb(150, 141, 141); */
-    margin: 10px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    display: block;
+
 }
 
 #info {
