--- a/Codes/chasses_au_tresor/V0/styles/jeu.css
+++ b/Codes/chasses_au_tresor/V0/styles/jeu.css
@@ -12,7 +12,7 @@ body {
     border: 1px solid rgb(150, 141, 141);
     padding: 0;
     margin: 10px;
-    height: 260px;
+    height: auto;
 }
 
 .row {
