--- a/Codes/chasses_au_tresor/V1/styles/jeu.css
+++ b/Codes/chasses_au_tresor/V1/styles/jeu.css
@@ -8,15 +8,14 @@ body {
 }
 
 #carte {
-    flex-direction: row;
+    display: block;
     border: 1px solid rgb(150, 141, 141);
     padding: 0;
     margin: 10px;
-    width: auto 100%;
+    height: auto;
 }
 
 .row {
-    width: auto;
     display: flex;
     flex-direction: row;
 }
@@ -32,15 +31,21 @@ body {
 
 #clicked {
     background-color: grey;
+    width: 20px;
+    height: 20px;
+    margin: 2px;
+    border: 1px solid rgb(140, 148, 140);
+    border-radius: 5%;
+    opacity: 0.5;
+    pointer-events: none;
 }
 
+/* .cases_unvalaible {
+} */
+
 #message {
-    /* border: 1px solid rgb(150, 141, 141); */
-    margin: 10px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    display: block;
+
 }
 
 #info {
